--- a/src/main/webapp/index.css
+++ b/src/main/webapp/index.css
@@ -24,11 +24,13 @@ body {
     pointer-events:     auto;
 }
 .cameraDiv {
+    display:            none;
     position:           absolute;
     left:               10px;
     top:                10px;
 }
 .fpsDiv {
+    display:            none; /* block */
     position:           absolute;
     right:              10px;
     top:                10px;
@@ -68,7 +70,7 @@ body {
     bottom:             10px;
     left:               10px;
     width:              calc(100% - 20px);
-    display:            flex;
+    display:            none; /* flex; */
     justify-content:    center;
     gap:                10px;
 }
